@@ -1,3 +1,7 @@
+Tue Jan 24 16:07:53 CET 2012
+	Added configure check for sin_len in 'struct sockaddr' and adding
+	code to initialize this field if it exists now. -CG
+
 Mon Jan 23 14:02:26 CET 2012
 	Fixed double-free if specified cipher was not valid (during
 	MHD_daemon_start).  Releasing 0.9.18. -CG
